open/close join page; fixed create account button z-index

--- a/style/index.scss
+++ b/style/index.scss
@@ -118,10 +118,10 @@ section.page.index {
             }
             
             &.join {
-                height: 125vh;
+                height: 120vh;
                 
-                .form {
-                    text-align: left;
+                .cover {
+                    margin-top: 25vh;
                 }
             }
             
